Modified jquery version in package.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES5",
     "module": "system",
-    "moduleResolution": "commonjs",
+    "moduleResolution": "classic",
     "experimentalDecorators": true,
     "noImplicitAny": true
   }
